--- a/style.css
+++ b/style.css
@@ -83,6 +83,21 @@ a.logo:hover, a.logo:focus {
 .logo span.hash {
   color: #FF6C60;
 }
+
+#when {
+  cursor: pointer;
+  -webkit-transition: background .25s ease;
+  -moz-transition: background .25s ease;
+  -ms-transition: background .25s ease;
+  -o-transition: background .25s ease;
+  transition: background .25s ease;
+}
+#when:hover {
+  /*border-bottom: 1px dashed;*/
+  background-color: rgb(254, 234, 198);
+  background-color: rgba(254, 234, 198, 0.59);
+}
+
 .top-nav  {
   margin-top: 7px;
 }
